--- a/02_gowin/DDS_project/impl/pnr/DDS_project.pin.html
+++ b/02_gowin/DDS_project/impl/pnr/DDS_project.pin.html
@@ -78,7 +78,7 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 </tr>
 <tr>
 <td class="label">Created Time</td>
-<td>Mon Jul  8 18:10:57 2024
+<td>Tue Sep  3 18:26:49 2024
 </td>
 </tr>
 <tr>
@@ -123,7 +123,7 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 <td>NA</td>
 <td>OFF</td>
 <td>NA</td>
-<td>3.3</td>
+<td>1.2</td>
 </tr>
 <tr>
 <td class="label">input_RESET_gen</td>
@@ -141,7 +141,7 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 <td>NA</td>
 <td>OFF</td>
 <td>NA</td>
-<td>3.3</td>
+<td>1.2</td>
 </tr>
 <tr>
 <td class="label">input_BTN_mode</td>
@@ -164,10 +164,10 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 <tr>
 <td class="label">input_Rot_A</td>
 <td></td>
-<td>69/1</td>
+<td>55/1</td>
 <td>Y</td>
 <td>in</td>
-<td>IOT42[A]</td>
+<td>IOR14[B]</td>
 <td>LVCMOS33</td>
 <td>NA</td>
 <td>UP</td>
@@ -177,7 +177,7 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 <td>NA</td>
 <td>OFF</td>
 <td>NA</td>
-<td>3.3</td>
+<td>1.2</td>
 </tr>
 <tr>
 <td class="label">input_Rot_B</td>
@@ -195,7 +195,7 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 <td>NA</td>
 <td>OFF</td>
 <td>NA</td>
-<td>3.3</td>
+<td>1.2</td>
 </tr>
 <tr>
 <td class="label">input_BTN_step</td>
@@ -213,7 +213,7 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 <td>NA</td>
 <td>OFF</td>
 <td>NA</td>
-<td>3.3</td>
+<td>1.2</td>
 </tr>
 <tr>
 <td class="label">output_Dac_CLK</td>
@@ -236,10 +236,10 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 <tr>
 <td class="label">output_interp_unsigned[0]</td>
 <td></td>
-<td>34/2</td>
+<td>38/2</td>
 <td>Y</td>
 <td>out</td>
-<td>IOB23[B]</td>
+<td>IOB31[B]</td>
 <td>LVCMOS33</td>
 <td>8</td>
 <td>UP</td>
@@ -253,168 +253,6 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 </tr>
 <tr>
 <td class="label">output_interp_unsigned[1]</td>
-<td></td>
-<td>33/2</td>
-<td>Y</td>
-<td>out</td>
-<td>IOB23[A]</td>
-<td>LVCMOS33</td>
-<td>8</td>
-<td>UP</td>
-<td>NA</td>
-<td>NA</td>
-<td>OFF</td>
-<td>NA</td>
-<td>NA</td>
-<td>NA</td>
-<td>3.3</td>
-</tr>
-<tr>
-<td class="label">output_interp_unsigned[2]</td>
-<td></td>
-<td>30/2</td>
-<td>Y</td>
-<td>out</td>
-<td>IOB13[B]</td>
-<td>LVCMOS33</td>
-<td>8</td>
-<td>UP</td>
-<td>NA</td>
-<td>NA</td>
-<td>OFF</td>
-<td>NA</td>
-<td>NA</td>
-<td>NA</td>
-<td>3.3</td>
-</tr>
-<tr>
-<td class="label">output_interp_unsigned[3]</td>
-<td></td>
-<td>29/2</td>
-<td>Y</td>
-<td>out</td>
-<td>IOB13[A]</td>
-<td>LVCMOS33</td>
-<td>8</td>
-<td>UP</td>
-<td>NA</td>
-<td>NA</td>
-<td>OFF</td>
-<td>NA</td>
-<td>NA</td>
-<td>NA</td>
-<td>3.3</td>
-</tr>
-<tr>
-<td class="label">output_interp_unsigned[4]</td>
-<td></td>
-<td>28/2</td>
-<td>Y</td>
-<td>out</td>
-<td>IOB11[B]</td>
-<td>LVCMOS33</td>
-<td>8</td>
-<td>UP</td>
-<td>NA</td>
-<td>NA</td>
-<td>OFF</td>
-<td>NA</td>
-<td>NA</td>
-<td>NA</td>
-<td>3.3</td>
-</tr>
-<tr>
-<td class="label">output_interp_unsigned[5]</td>
-<td></td>
-<td>27/2</td>
-<td>Y</td>
-<td>out</td>
-<td>IOB11[A]</td>
-<td>LVCMOS33</td>
-<td>8</td>
-<td>UP</td>
-<td>NA</td>
-<td>NA</td>
-<td>OFF</td>
-<td>NA</td>
-<td>NA</td>
-<td>NA</td>
-<td>3.3</td>
-</tr>
-<tr>
-<td class="label">output_interp_unsigned[6]</td>
-<td></td>
-<td>26/2</td>
-<td>Y</td>
-<td>out</td>
-<td>IOB8[B]</td>
-<td>LVCMOS33</td>
-<td>8</td>
-<td>UP</td>
-<td>NA</td>
-<td>NA</td>
-<td>OFF</td>
-<td>NA</td>
-<td>NA</td>
-<td>NA</td>
-<td>3.3</td>
-</tr>
-<tr>
-<td class="label">output_interp_unsigned[7]</td>
-<td></td>
-<td>25/2</td>
-<td>Y</td>
-<td>out</td>
-<td>IOB8[A]</td>
-<td>LVCMOS33</td>
-<td>8</td>
-<td>UP</td>
-<td>NA</td>
-<td>NA</td>
-<td>OFF</td>
-<td>NA</td>
-<td>NA</td>
-<td>NA</td>
-<td>3.3</td>
-</tr>
-<tr>
-<td class="label">output_interp_unsigned[8]</td>
-<td></td>
-<td>39/2</td>
-<td>Y</td>
-<td>out</td>
-<td>IOB33[A]</td>
-<td>LVCMOS33</td>
-<td>8</td>
-<td>UP</td>
-<td>NA</td>
-<td>NA</td>
-<td>OFF</td>
-<td>NA</td>
-<td>NA</td>
-<td>NA</td>
-<td>3.3</td>
-</tr>
-<tr>
-<td class="label">output_interp_unsigned[9]</td>
-<td></td>
-<td>36/2</td>
-<td>Y</td>
-<td>out</td>
-<td>IOB29[B]</td>
-<td>LVCMOS33</td>
-<td>8</td>
-<td>UP</td>
-<td>NA</td>
-<td>NA</td>
-<td>OFF</td>
-<td>NA</td>
-<td>NA</td>
-<td>NA</td>
-<td>3.3</td>
-</tr>
-<tr>
-<td class="label">output_interp_unsigned[10]</td>
 <td></td>
 <td>37/2</td>
 <td>Y</td>
@@ -432,12 +270,174 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 <td>3.3</td>
 </tr>
 <tr>
-<td class="label">output_interp_unsigned[11]</td>
+<td class="label">output_interp_unsigned[2]</td>
 <td></td>
-<td>38/2</td>
+<td>36/2</td>
 <td>Y</td>
 <td>out</td>
-<td>IOB31[B]</td>
+<td>IOB29[B]</td>
+<td>LVCMOS33</td>
+<td>8</td>
+<td>UP</td>
+<td>NA</td>
+<td>NA</td>
+<td>OFF</td>
+<td>NA</td>
+<td>NA</td>
+<td>NA</td>
+<td>3.3</td>
+</tr>
+<tr>
+<td class="label">output_interp_unsigned[3]</td>
+<td></td>
+<td>39/2</td>
+<td>Y</td>
+<td>out</td>
+<td>IOB33[A]</td>
+<td>LVCMOS33</td>
+<td>8</td>
+<td>UP</td>
+<td>NA</td>
+<td>NA</td>
+<td>OFF</td>
+<td>NA</td>
+<td>NA</td>
+<td>NA</td>
+<td>3.3</td>
+</tr>
+<tr>
+<td class="label">output_interp_unsigned[4]</td>
+<td></td>
+<td>25/2</td>
+<td>Y</td>
+<td>out</td>
+<td>IOB8[A]</td>
+<td>LVCMOS33</td>
+<td>8</td>
+<td>UP</td>
+<td>NA</td>
+<td>NA</td>
+<td>OFF</td>
+<td>NA</td>
+<td>NA</td>
+<td>NA</td>
+<td>3.3</td>
+</tr>
+<tr>
+<td class="label">output_interp_unsigned[5]</td>
+<td></td>
+<td>26/2</td>
+<td>Y</td>
+<td>out</td>
+<td>IOB8[B]</td>
+<td>LVCMOS33</td>
+<td>8</td>
+<td>UP</td>
+<td>NA</td>
+<td>NA</td>
+<td>OFF</td>
+<td>NA</td>
+<td>NA</td>
+<td>NA</td>
+<td>3.3</td>
+</tr>
+<tr>
+<td class="label">output_interp_unsigned[6]</td>
+<td></td>
+<td>27/2</td>
+<td>Y</td>
+<td>out</td>
+<td>IOB11[A]</td>
+<td>LVCMOS33</td>
+<td>8</td>
+<td>UP</td>
+<td>NA</td>
+<td>NA</td>
+<td>OFF</td>
+<td>NA</td>
+<td>NA</td>
+<td>NA</td>
+<td>3.3</td>
+</tr>
+<tr>
+<td class="label">output_interp_unsigned[7]</td>
+<td></td>
+<td>28/2</td>
+<td>Y</td>
+<td>out</td>
+<td>IOB11[B]</td>
+<td>LVCMOS33</td>
+<td>8</td>
+<td>UP</td>
+<td>NA</td>
+<td>NA</td>
+<td>OFF</td>
+<td>NA</td>
+<td>NA</td>
+<td>NA</td>
+<td>3.3</td>
+</tr>
+<tr>
+<td class="label">output_interp_unsigned[8]</td>
+<td></td>
+<td>29/2</td>
+<td>Y</td>
+<td>out</td>
+<td>IOB13[A]</td>
+<td>LVCMOS33</td>
+<td>8</td>
+<td>UP</td>
+<td>NA</td>
+<td>NA</td>
+<td>OFF</td>
+<td>NA</td>
+<td>NA</td>
+<td>NA</td>
+<td>3.3</td>
+</tr>
+<tr>
+<td class="label">output_interp_unsigned[9]</td>
+<td></td>
+<td>30/2</td>
+<td>Y</td>
+<td>out</td>
+<td>IOB13[B]</td>
+<td>LVCMOS33</td>
+<td>8</td>
+<td>UP</td>
+<td>NA</td>
+<td>NA</td>
+<td>OFF</td>
+<td>NA</td>
+<td>NA</td>
+<td>NA</td>
+<td>3.3</td>
+</tr>
+<tr>
+<td class="label">output_interp_unsigned[10]</td>
+<td></td>
+<td>33/2</td>
+<td>Y</td>
+<td>out</td>
+<td>IOB23[A]</td>
+<td>LVCMOS33</td>
+<td>8</td>
+<td>UP</td>
+<td>NA</td>
+<td>NA</td>
+<td>OFF</td>
+<td>NA</td>
+<td>NA</td>
+<td>NA</td>
+<td>3.3</td>
+</tr>
+<tr>
+<td class="label">output_interp_unsigned[11]</td>
+<td></td>
+<td>34/2</td>
+<td>Y</td>
+<td>out</td>
+<td>IOB23[B]</td>
 <td>LVCMOS33</td>
 <td>8</td>
 <td>UP</td>
@@ -483,7 +483,7 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 <td>NA</td>
 <td>NA</td>
 <td>NA</td>
-<td>3.3</td>
+<td>1.2</td>
 </tr>
 <tr>
 <td class="label">88/3</td>
@@ -499,7 +499,7 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 <td>NA</td>
 <td>NA</td>
 <td>NA</td>
-<td>3.3</td>
+<td>1.2</td>
 </tr>
 <tr>
 <td class="label">87/3</td>
@@ -515,7 +515,7 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 <td>NA</td>
 <td>NA</td>
 <td>NA</td>
-<td>3.3</td>
+<td>1.2</td>
 </tr>
 <tr>
 <td class="label">86/3</td>
@@ -531,7 +531,7 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 <td>NA</td>
 <td>NA</td>
 <td>NA</td>
-<td>3.3</td>
+<td>1.2</td>
 </tr>
 <tr>
 <td class="label">85/3</td>
@@ -547,7 +547,7 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 <td>NA</td>
 <td>NA</td>
 <td>NA</td>
-<td>3.3</td>
+<td>1.2</td>
 </tr>
 <tr>
 <td class="label">84/3</td>
@@ -563,7 +563,7 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 <td>NA</td>
 <td>NA</td>
 <td>NA</td>
-<td>3.3</td>
+<td>1.2</td>
 </tr>
 <tr>
 <td class="label">83/3</td>
@@ -579,7 +579,7 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 <td>NA</td>
 <td>NA</td>
 <td>NA</td>
-<td>3.3</td>
+<td>1.2</td>
 </tr>
 <tr>
 <td class="label">82/3</td>
@@ -595,7 +595,7 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 <td>NA</td>
 <td>NA</td>
 <td>NA</td>
-<td>3.3</td>
+<td>1.2</td>
 </tr>
 <tr>
 <td class="label">81/3</td>
@@ -611,7 +611,7 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 <td>NA</td>
 <td>NA</td>
 <td>NA</td>
-<td>3.3</td>
+<td>1.2</td>
 </tr>
 <tr>
 <td class="label">80/3</td>
@@ -627,7 +627,7 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 <td>NA</td>
 <td>NA</td>
 <td>NA</td>
-<td>3.3</td>
+<td>1.2</td>
 </tr>
 <tr>
 <td class="label">79/3</td>
@@ -643,7 +643,7 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 <td>NA</td>
 <td>NA</td>
 <td>NA</td>
-<td>3.3</td>
+<td>1.2</td>
 </tr>
 <tr>
 <td class="label">77/1</td>
@@ -659,7 +659,7 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 <td>NA</td>
 <td>NA</td>
 <td>NA</td>
-<td>3.3</td>
+<td>1.2</td>
 </tr>
 <tr>
 <td class="label">76/1</td>
@@ -675,7 +675,7 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 <td>NA</td>
 <td>NA</td>
 <td>NA</td>
-<td>3.3</td>
+<td>1.2</td>
 </tr>
 <tr>
 <td class="label">75/1</td>
@@ -691,7 +691,7 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 <td>NA</td>
 <td>NA</td>
 <td>NA</td>
-<td>3.3</td>
+<td>1.2</td>
 </tr>
 <tr>
 <td class="label">74/1</td>
@@ -707,7 +707,7 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 <td>NA</td>
 <td>NA</td>
 <td>NA</td>
-<td>3.3</td>
+<td>1.2</td>
 </tr>
 <tr>
 <td class="label">73/1</td>
@@ -723,7 +723,7 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 <td>NA</td>
 <td>NA</td>
 <td>NA</td>
-<td>3.3</td>
+<td>1.2</td>
 </tr>
 <tr>
 <td class="label">72/1</td>
@@ -739,7 +739,7 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 <td>NA</td>
 <td>NA</td>
 <td>NA</td>
-<td>3.3</td>
+<td>1.2</td>
 </tr>
 <tr>
 <td class="label">71/1</td>
@@ -755,7 +755,7 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 <td>NA</td>
 <td>NA</td>
 <td>NA</td>
-<td>3.3</td>
+<td>1.2</td>
 </tr>
 <tr>
 <td class="label">70/1</td>
@@ -771,23 +771,23 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 <td>NA</td>
 <td>NA</td>
 <td>NA</td>
-<td>3.3</td>
+<td>1.2</td>
 </tr>
 <tr>
 <td class="label">69/1</td>
-<td>input_Rot_A</td>
+<td>-</td>
 <td>in</td>
 <td>IOT42[A]</td>
-<td>LVCMOS33</td>
+<td>LVCMOS18</td>
 <td>NA</td>
 <td>UP</td>
 <td>ON</td>
 <td>NONE</td>
 <td>NA</td>
 <td>NA</td>
-<td>OFF</td>
 <td>NA</td>
-<td>3.3</td>
+<td>NA</td>
+<td>1.2</td>
 </tr>
 <tr>
 <td class="label">68/1</td>
@@ -803,7 +803,7 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 <td>NA</td>
 <td>OFF</td>
 <td>NA</td>
-<td>3.3</td>
+<td>1.2</td>
 </tr>
 <tr>
 <td class="label">17/2</td>
@@ -871,7 +871,7 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 </tr>
 <tr>
 <td class="label">25/2</td>
-<td>output_interp_unsigned[7]</td>
+<td>output_interp_unsigned[4]</td>
 <td>out</td>
 <td>IOB8[A]</td>
 <td>LVCMOS33</td>
@@ -887,7 +887,7 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 </tr>
 <tr>
 <td class="label">26/2</td>
-<td>output_interp_unsigned[6]</td>
+<td>output_interp_unsigned[5]</td>
 <td>out</td>
 <td>IOB8[B]</td>
 <td>LVCMOS33</td>
@@ -903,7 +903,7 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 </tr>
 <tr>
 <td class="label">27/2</td>
-<td>output_interp_unsigned[5]</td>
+<td>output_interp_unsigned[6]</td>
 <td>out</td>
 <td>IOB11[A]</td>
 <td>LVCMOS33</td>
@@ -919,7 +919,7 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 </tr>
 <tr>
 <td class="label">28/2</td>
-<td>output_interp_unsigned[4]</td>
+<td>output_interp_unsigned[7]</td>
 <td>out</td>
 <td>IOB11[B]</td>
 <td>LVCMOS33</td>
@@ -935,7 +935,7 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 </tr>
 <tr>
 <td class="label">29/2</td>
-<td>output_interp_unsigned[3]</td>
+<td>output_interp_unsigned[8]</td>
 <td>out</td>
 <td>IOB13[A]</td>
 <td>LVCMOS33</td>
@@ -951,7 +951,7 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 </tr>
 <tr>
 <td class="label">30/2</td>
-<td>output_interp_unsigned[2]</td>
+<td>output_interp_unsigned[9]</td>
 <td>out</td>
 <td>IOB13[B]</td>
 <td>LVCMOS33</td>
@@ -999,7 +999,7 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 </tr>
 <tr>
 <td class="label">33/2</td>
-<td>output_interp_unsigned[1]</td>
+<td>output_interp_unsigned[10]</td>
 <td>out</td>
 <td>IOB23[A]</td>
 <td>LVCMOS33</td>
@@ -1015,7 +1015,7 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 </tr>
 <tr>
 <td class="label">34/2</td>
-<td>output_interp_unsigned[0]</td>
+<td>output_interp_unsigned[11]</td>
 <td>out</td>
 <td>IOB23[B]</td>
 <td>LVCMOS33</td>
@@ -1047,7 +1047,7 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 </tr>
 <tr>
 <td class="label">36/2</td>
-<td>output_interp_unsigned[9]</td>
+<td>output_interp_unsigned[2]</td>
 <td>out</td>
 <td>IOB29[B]</td>
 <td>LVCMOS33</td>
@@ -1063,7 +1063,7 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 </tr>
 <tr>
 <td class="label">37/2</td>
-<td>output_interp_unsigned[10]</td>
+<td>output_interp_unsigned[1]</td>
 <td>out</td>
 <td>IOB31[A]</td>
 <td>LVCMOS33</td>
@@ -1079,7 +1079,7 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 </tr>
 <tr>
 <td class="label">38/2</td>
-<td>output_interp_unsigned[11]</td>
+<td>output_interp_unsigned[0]</td>
 <td>out</td>
 <td>IOB31[B]</td>
 <td>LVCMOS33</td>
@@ -1095,7 +1095,7 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 </tr>
 <tr>
 <td class="label">39/2</td>
-<td>output_interp_unsigned[8]</td>
+<td>output_interp_unsigned[3]</td>
 <td>out</td>
 <td>IOB33[A]</td>
 <td>LVCMOS33</td>
@@ -1187,7 +1187,7 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 <td>NA</td>
 <td>OFF</td>
 <td>NA</td>
-<td>3.3</td>
+<td>1.2</td>
 </tr>
 <tr>
 <td class="label">5/3</td>
@@ -1203,7 +1203,7 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 <td>NA</td>
 <td>NA</td>
 <td>NA</td>
-<td>3.3</td>
+<td>1.2</td>
 </tr>
 <tr>
 <td class="label">6/3</td>
@@ -1219,7 +1219,7 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 <td>NA</td>
 <td>NA</td>
 <td>NA</td>
-<td>3.3</td>
+<td>1.2</td>
 </tr>
 <tr>
 <td class="label">7/3</td>
@@ -1235,7 +1235,7 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 <td>NA</td>
 <td>NA</td>
 <td>NA</td>
-<td>3.3</td>
+<td>1.2</td>
 </tr>
 <tr>
 <td class="label">8/3</td>
@@ -1251,7 +1251,7 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 <td>NA</td>
 <td>NA</td>
 <td>NA</td>
-<td>3.3</td>
+<td>1.2</td>
 </tr>
 <tr>
 <td class="label">9/3</td>
@@ -1267,7 +1267,7 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 <td>NA</td>
 <td>NA</td>
 <td>NA</td>
-<td>3.3</td>
+<td>1.2</td>
 </tr>
 <tr>
 <td class="label">10/3</td>
@@ -1283,7 +1283,7 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 <td>NA</td>
 <td>NA</td>
 <td>NA</td>
-<td>3.3</td>
+<td>1.2</td>
 </tr>
 <tr>
 <td class="label">11/3</td>
@@ -1299,7 +1299,7 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 <td>NA</td>
 <td>NA</td>
 <td>NA</td>
-<td>3.3</td>
+<td>1.2</td>
 </tr>
 <tr>
 <td class="label">13/3</td>
@@ -1315,7 +1315,7 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 <td>NA</td>
 <td>NA</td>
 <td>NA</td>
-<td>3.3</td>
+<td>1.2</td>
 </tr>
 <tr>
 <td class="label">14/3</td>
@@ -1331,7 +1331,7 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 <td>NA</td>
 <td>NA</td>
 <td>NA</td>
-<td>3.3</td>
+<td>1.2</td>
 </tr>
 <tr>
 <td class="label">15/3</td>
@@ -1347,7 +1347,7 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 <td>NA</td>
 <td>NA</td>
 <td>NA</td>
-<td>3.3</td>
+<td>1.2</td>
 </tr>
 <tr>
 <td class="label">16/3</td>
@@ -1363,7 +1363,7 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 <td>NA</td>
 <td>NA</td>
 <td>NA</td>
-<td>3.3</td>
+<td>1.2</td>
 </tr>
 <tr>
 <td class="label">63/1</td>
@@ -1379,7 +1379,7 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 <td>NA</td>
 <td>NA</td>
 <td>NA</td>
-<td>3.3</td>
+<td>1.2</td>
 </tr>
 <tr>
 <td class="label">62/1</td>
@@ -1395,7 +1395,7 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 <td>NA</td>
 <td>NA</td>
 <td>NA</td>
-<td>3.3</td>
+<td>1.2</td>
 </tr>
 <tr>
 <td class="label">61/1</td>
@@ -1411,7 +1411,7 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 <td>NA</td>
 <td>NA</td>
 <td>NA</td>
-<td>3.3</td>
+<td>1.2</td>
 </tr>
 <tr>
 <td class="label">60/1</td>
@@ -1427,7 +1427,7 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 <td>NA</td>
 <td>NA</td>
 <td>NA</td>
-<td>3.3</td>
+<td>1.2</td>
 </tr>
 <tr>
 <td class="label">59/1</td>
@@ -1443,7 +1443,7 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 <td>NA</td>
 <td>NA</td>
 <td>NA</td>
-<td>3.3</td>
+<td>1.2</td>
 </tr>
 <tr>
 <td class="label">57/1</td>
@@ -1459,7 +1459,7 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 <td>NA</td>
 <td>OFF</td>
 <td>NA</td>
-<td>3.3</td>
+<td>1.2</td>
 </tr>
 <tr>
 <td class="label">56/1</td>
@@ -1475,23 +1475,23 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 <td>NA</td>
 <td>NA</td>
 <td>NA</td>
-<td>3.3</td>
+<td>1.2</td>
 </tr>
 <tr>
 <td class="label">55/1</td>
-<td>-</td>
+<td>input_Rot_A</td>
 <td>in</td>
 <td>IOR14[B]</td>
-<td>LVCMOS18</td>
+<td>LVCMOS33</td>
 <td>NA</td>
 <td>UP</td>
 <td>ON</td>
 <td>NONE</td>
 <td>NA</td>
 <td>NA</td>
+<td>OFF</td>
 <td>NA</td>
-<td>NA</td>
-<td>3.3</td>
+<td>1.2</td>
 </tr>
 <tr>
 <td class="label">54/1</td>
@@ -1507,7 +1507,7 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 <td>NA</td>
 <td>NA</td>
 <td>NA</td>
-<td>3.3</td>
+<td>1.2</td>
 </tr>
 <tr>
 <td class="label">53/1</td>
@@ -1523,7 +1523,7 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 <td>NA</td>
 <td>NA</td>
 <td>NA</td>
-<td>3.3</td>
+<td>1.2</td>
 </tr>
 <tr>
 <td class="label">52/1</td>
@@ -1539,7 +1539,7 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 <td>NA</td>
 <td>OFF</td>
 <td>NA</td>
-<td>3.3</td>
+<td>1.2</td>
 </tr>
 <tr>
 <td class="label">51/1</td>
@@ -1555,7 +1555,7 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 <td>NA</td>
 <td>NA</td>
 <td>NA</td>
-<td>3.3</td>
+<td>1.2</td>
 </tr>
 <tr>
 <td class="label">50/1</td>
@@ -1571,7 +1571,7 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 <td>NA</td>
 <td>NA</td>
 <td>NA</td>
-<td>3.3</td>
+<td>1.2</td>
 </tr>
 <tr>
 <td class="label">49/1</td>
@@ -1587,7 +1587,7 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 <td>NA</td>
 <td>NA</td>
 <td>NA</td>
-<td>3.3</td>
+<td>1.2</td>
 </tr>
 <tr>
 <td class="label">48/1</td>
@@ -1603,7 +1603,7 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 <td>NA</td>
 <td>NA</td>
 <td>NA</td>
-<td>3.3</td>
+<td>1.2</td>
 </tr>
 </table>
 <br/>
