--- a/02_gowin/DDS_project/impl/pnr/DDS_project.power.html
+++ b/02_gowin/DDS_project/impl/pnr/DDS_project.power.html
@@ -87,7 +87,7 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 </tr>
 <tr>
 <td class="label">Created Time</td>
-<td>Mon Jul  8 18:10:57 2024
+<td>Tue Sep  3 18:26:49 2024
 </td>
 </tr>
 <tr>
@@ -100,15 +100,15 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 <table class="summary_table">
 <tr>
 <td class="label">Total Power (mW)</td>
-<td>24.871</td>
+<td>23.707</td>
 </tr>
 <tr>
 <td class="label">Quiescent Power (mW)</td>
-<td>19.935</td>
+<td>18.830</td>
 </tr>
 <tr>
 <td class="label">Dynamic Power (mW)</td>
-<td>4.936</td>
+<td>4.878</td>
 </tr>
 <tr>
 <td class="label">Psram Power (mW)</td>
@@ -119,7 +119,7 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 <table class="summary_table">
 <tr>
 <td class="label">Junction Temperature</td>
-<td>25.510</td>
+<td>25.485</td>
 </tr>
 <tr>
 <td class="label">Theta JA</td>
@@ -127,7 +127,7 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 </tr>
 <tr>
 <td class="label">Max Allowed Ambient Temperature</td>
-<td>84.490</td>
+<td>84.515</td>
 </tr>
 </table>
 <h2><a name="Configure_Info">Configure Information:</a></h2>
@@ -208,11 +208,18 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 <td>9.742</td>
 </tr>
 <tr>
+<td>VCCIO12</td>
+<td>1.200</td>
+<td>0.028</td>
+<td>0.526</td>
+<td>0.665</td>
+</tr>
+<tr>
 <td>VCCIO33</td>
 <td>3.300</td>
-<td>0.109</td>
-<td>2.050</td>
-<td>7.125</td>
+<td>0.081</td>
+<td>1.524</td>
+<td>5.298</td>
 </tr>
 </table>
 <h1><a name="Detail">Power Details</a></h1>
@@ -232,8 +239,8 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 </tr>
 <tr>
 <td>IO</td>
-<td>8.107
-<td>7.345
+<td>6.944
+<td>6.240
 <td>4.441
 </tr>
 <tr>
