--- a/02_gowin/DDS_project/impl/pnr/DDS_project.rpt.html
+++ b/02_gowin/DDS_project/impl/pnr/DDS_project.rpt.html
@@ -83,7 +83,7 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 </tr>
 <tr>
 <td class="label">Created Time</td>
-<td>Mon Jul  8 18:10:57 2024
+<td>Tue Sep  3 18:26:49 2024
 </td>
 </tr>
 <tr>
@@ -97,24 +97,24 @@ table.detail_table th.label {  min-width: 8%; width: 8%; }
 <tr>
 <td class="label">Place & Route Process</td>
 <td>Running placement:
-   Placement Phase 0: CPU time = 0h 0m 2s, Elapsed time = 0h 0m 2s
-   Placement Phase 1: CPU time = 0h 0m 0.72s, Elapsed time = 0h 0m 0.717s
-   Placement Phase 2: CPU time = 0h 0m 2s, Elapsed time = 0h 0m 2s
-   Placement Phase 3: CPU time = 0h 0m 32s, Elapsed time = 0h 0m 32s
-   Total Placement: CPU time = 0h 0m 37s, Elapsed time = 0h 0m 36s
+   Placement Phase 0: CPU time = 0h 0m 1s, Elapsed time = 0h 0m 1s
+   Placement Phase 1: CPU time = 0h 0m 0.566s, Elapsed time = 0h 0m 0.564s
+   Placement Phase 2: CPU time = 0h 0m 1s, Elapsed time = 0h 0m 1s
+   Placement Phase 3: CPU time = 0h 0m 30s, Elapsed time = 0h 0m 30s
+   Total Placement: CPU time = 0h 0m 34s, Elapsed time = 0h 0m 33s
 Running routing:
-   Routing Phase 0: CPU time = 0h 0m 0.002s, Elapsed time = 0h 0m 0.002s
+   Routing Phase 0: CPU time = 0h 0m 0.002s, Elapsed time = 0h 0m 0.003s
    Routing Phase 1: CPU time = 0h 0m 3s, Elapsed time = 0h 0m 3s
-   Routing Phase 2: CPU time = 0h 0m 59s, Elapsed time = 0h 0m 59s
+   Routing Phase 2: CPU time = 0h 0m 54s, Elapsed time = 0h 0m 53s
    Routing Phase 3: CPU time = 0h 0m 0s, Elapsed time = 0h 0m 0s
-   Total Routing: CPU time = 0h 1m 2s, Elapsed time = 0h 1m 2s
+   Total Routing: CPU time = 0h 0m 56s, Elapsed time = 0h 0m 56s
 Generate output files:
    CPU time = 0h 0m 2s, Elapsed time = 0h 0m 2s
 </td>
 </tr>
 <tr>
 <td class="label">Total Time and Memory Usage</td>
-<td>CPU time = 0h 1m 40s, Elapsed time = 0h 1m 40s, Peak memory usage = 315MB</td>
+<td>CPU time = 0h 1m 32s, Elapsed time = 0h 1m 31s, Peak memory usage = 333MB</td>
 </tr>
 </table>
 <br/>
@@ -169,7 +169,7 @@ Generate output files:
 </tr>
 <tr>
 <td class="label">CLS</td>
-<td>1758/4320</td>
+<td>1757/4320</td>
 <td>41%</td>
 </tr>
 <tr>
@@ -374,7 +374,7 @@ Generate output files:
 <td>NA</td>
 <td>OFF</td>
 <td>NA</td>
-<td>3.3</td>
+<td>1.2</td>
 </tr>
 <tr>
 <td class="label">input_RESET_gen</td>
@@ -392,7 +392,7 @@ Generate output files:
 <td>NA</td>
 <td>OFF</td>
 <td>NA</td>
-<td>3.3</td>
+<td>1.2</td>
 </tr>
 <tr>
 <td class="label">input_BTN_mode</td>
@@ -415,10 +415,10 @@ Generate output files:
 <tr>
 <td class="label">input_Rot_A</td>
 <td></td>
-<td>69/1</td>
+<td>55/1</td>
 <td>Y</td>
 <td>in</td>
-<td>IOT42[A]</td>
+<td>IOR14[B]</td>
 <td>LVCMOS33</td>
 <td>NA</td>
 <td>UP</td>
@@ -428,7 +428,7 @@ Generate output files:
 <td>NA</td>
 <td>OFF</td>
 <td>NA</td>
-<td>3.3</td>
+<td>1.2</td>
 </tr>
 <tr>
 <td class="label">input_Rot_B</td>
@@ -446,7 +446,7 @@ Generate output files:
 <td>NA</td>
 <td>OFF</td>
 <td>NA</td>
-<td>3.3</td>
+<td>1.2</td>
 </tr>
 <tr>
 <td class="label">input_BTN_step</td>
@@ -464,7 +464,7 @@ Generate output files:
 <td>NA</td>
 <td>OFF</td>
 <td>NA</td>
-<td>3.3</td>
+<td>1.2</td>
 </tr>
 <tr>
 <td class="label">output_Dac_CLK</td>
@@ -487,10 +487,10 @@ Generate output files:
 <tr>
 <td class="label">output_interp_unsigned[0]</td>
 <td></td>
-<td>34/2</td>
+<td>38/2</td>
 <td>Y</td>
 <td>out</td>
-<td>IOB23[B]</td>
+<td>IOB31[B]</td>
 <td>LVCMOS33</td>
 <td>8</td>
 <td>UP</td>
@@ -504,168 +504,6 @@ Generate output files:
 </tr>
 <tr>
 <td class="label">output_interp_unsigned[1]</td>
-<td></td>
-<td>33/2</td>
-<td>Y</td>
-<td>out</td>
-<td>IOB23[A]</td>
-<td>LVCMOS33</td>
-<td>8</td>
-<td>UP</td>
-<td>NA</td>
-<td>NA</td>
-<td>OFF</td>
-<td>NA</td>
-<td>NA</td>
-<td>NA</td>
-<td>3.3</td>
-</tr>
-<tr>
-<td class="label">output_interp_unsigned[2]</td>
-<td></td>
-<td>30/2</td>
-<td>Y</td>
-<td>out</td>
-<td>IOB13[B]</td>
-<td>LVCMOS33</td>
-<td>8</td>
-<td>UP</td>
-<td>NA</td>
-<td>NA</td>
-<td>OFF</td>
-<td>NA</td>
-<td>NA</td>
-<td>NA</td>
-<td>3.3</td>
-</tr>
-<tr>
-<td class="label">output_interp_unsigned[3]</td>
-<td></td>
-<td>29/2</td>
-<td>Y</td>
-<td>out</td>
-<td>IOB13[A]</td>
-<td>LVCMOS33</td>
-<td>8</td>
-<td>UP</td>
-<td>NA</td>
-<td>NA</td>
-<td>OFF</td>
-<td>NA</td>
-<td>NA</td>
-<td>NA</td>
-<td>3.3</td>
-</tr>
-<tr>
-<td class="label">output_interp_unsigned[4]</td>
-<td></td>
-<td>28/2</td>
-<td>Y</td>
-<td>out</td>
-<td>IOB11[B]</td>
-<td>LVCMOS33</td>
-<td>8</td>
-<td>UP</td>
-<td>NA</td>
-<td>NA</td>
-<td>OFF</td>
-<td>NA</td>
-<td>NA</td>
-<td>NA</td>
-<td>3.3</td>
-</tr>
-<tr>
-<td class="label">output_interp_unsigned[5]</td>
-<td></td>
-<td>27/2</td>
-<td>Y</td>
-<td>out</td>
-<td>IOB11[A]</td>
-<td>LVCMOS33</td>
-<td>8</td>
-<td>UP</td>
-<td>NA</td>
-<td>NA</td>
-<td>OFF</td>
-<td>NA</td>
-<td>NA</td>
-<td>NA</td>
-<td>3.3</td>
-</tr>
-<tr>
-<td class="label">output_interp_unsigned[6]</td>
-<td></td>
-<td>26/2</td>
-<td>Y</td>
-<td>out</td>
-<td>IOB8[B]</td>
-<td>LVCMOS33</td>
-<td>8</td>
-<td>UP</td>
-<td>NA</td>
-<td>NA</td>
-<td>OFF</td>
-<td>NA</td>
-<td>NA</td>
-<td>NA</td>
-<td>3.3</td>
-</tr>
-<tr>
-<td class="label">output_interp_unsigned[7]</td>
-<td></td>
-<td>25/2</td>
-<td>Y</td>
-<td>out</td>
-<td>IOB8[A]</td>
-<td>LVCMOS33</td>
-<td>8</td>
-<td>UP</td>
-<td>NA</td>
-<td>NA</td>
-<td>OFF</td>
-<td>NA</td>
-<td>NA</td>
-<td>NA</td>
-<td>3.3</td>
-</tr>
-<tr>
-<td class="label">output_interp_unsigned[8]</td>
-<td></td>
-<td>39/2</td>
-<td>Y</td>
-<td>out</td>
-<td>IOB33[A]</td>
-<td>LVCMOS33</td>
-<td>8</td>
-<td>UP</td>
-<td>NA</td>
-<td>NA</td>
-<td>OFF</td>
-<td>NA</td>
-<td>NA</td>
-<td>NA</td>
-<td>3.3</td>
-</tr>
-<tr>
-<td class="label">output_interp_unsigned[9]</td>
-<td></td>
-<td>36/2</td>
-<td>Y</td>
-<td>out</td>
-<td>IOB29[B]</td>
-<td>LVCMOS33</td>
-<td>8</td>
-<td>UP</td>
-<td>NA</td>
-<td>NA</td>
-<td>OFF</td>
-<td>NA</td>
-<td>NA</td>
-<td>NA</td>
-<td>3.3</td>
-</tr>
-<tr>
-<td class="label">output_interp_unsigned[10]</td>
 <td></td>
 <td>37/2</td>
 <td>Y</td>
@@ -683,12 +521,174 @@ Generate output files:
 <td>3.3</td>
 </tr>
 <tr>
-<td class="label">output_interp_unsigned[11]</td>
+<td class="label">output_interp_unsigned[2]</td>
 <td></td>
-<td>38/2</td>
+<td>36/2</td>
 <td>Y</td>
 <td>out</td>
-<td>IOB31[B]</td>
+<td>IOB29[B]</td>
+<td>LVCMOS33</td>
+<td>8</td>
+<td>UP</td>
+<td>NA</td>
+<td>NA</td>
+<td>OFF</td>
+<td>NA</td>
+<td>NA</td>
+<td>NA</td>
+<td>3.3</td>
+</tr>
+<tr>
+<td class="label">output_interp_unsigned[3]</td>
+<td></td>
+<td>39/2</td>
+<td>Y</td>
+<td>out</td>
+<td>IOB33[A]</td>
+<td>LVCMOS33</td>
+<td>8</td>
+<td>UP</td>
+<td>NA</td>
+<td>NA</td>
+<td>OFF</td>
+<td>NA</td>
+<td>NA</td>
+<td>NA</td>
+<td>3.3</td>
+</tr>
+<tr>
+<td class="label">output_interp_unsigned[4]</td>
+<td></td>
+<td>25/2</td>
+<td>Y</td>
+<td>out</td>
+<td>IOB8[A]</td>
+<td>LVCMOS33</td>
+<td>8</td>
+<td>UP</td>
+<td>NA</td>
+<td>NA</td>
+<td>OFF</td>
+<td>NA</td>
+<td>NA</td>
+<td>NA</td>
+<td>3.3</td>
+</tr>
+<tr>
+<td class="label">output_interp_unsigned[5]</td>
+<td></td>
+<td>26/2</td>
+<td>Y</td>
+<td>out</td>
+<td>IOB8[B]</td>
+<td>LVCMOS33</td>
+<td>8</td>
+<td>UP</td>
+<td>NA</td>
+<td>NA</td>
+<td>OFF</td>
+<td>NA</td>
+<td>NA</td>
+<td>NA</td>
+<td>3.3</td>
+</tr>
+<tr>
+<td class="label">output_interp_unsigned[6]</td>
+<td></td>
+<td>27/2</td>
+<td>Y</td>
+<td>out</td>
+<td>IOB11[A]</td>
+<td>LVCMOS33</td>
+<td>8</td>
+<td>UP</td>
+<td>NA</td>
+<td>NA</td>
+<td>OFF</td>
+<td>NA</td>
+<td>NA</td>
+<td>NA</td>
+<td>3.3</td>
+</tr>
+<tr>
+<td class="label">output_interp_unsigned[7]</td>
+<td></td>
+<td>28/2</td>
+<td>Y</td>
+<td>out</td>
+<td>IOB11[B]</td>
+<td>LVCMOS33</td>
+<td>8</td>
+<td>UP</td>
+<td>NA</td>
+<td>NA</td>
+<td>OFF</td>
+<td>NA</td>
+<td>NA</td>
+<td>NA</td>
+<td>3.3</td>
+</tr>
+<tr>
+<td class="label">output_interp_unsigned[8]</td>
+<td></td>
+<td>29/2</td>
+<td>Y</td>
+<td>out</td>
+<td>IOB13[A]</td>
+<td>LVCMOS33</td>
+<td>8</td>
+<td>UP</td>
+<td>NA</td>
+<td>NA</td>
+<td>OFF</td>
+<td>NA</td>
+<td>NA</td>
+<td>NA</td>
+<td>3.3</td>
+</tr>
+<tr>
+<td class="label">output_interp_unsigned[9]</td>
+<td></td>
+<td>30/2</td>
+<td>Y</td>
+<td>out</td>
+<td>IOB13[B]</td>
+<td>LVCMOS33</td>
+<td>8</td>
+<td>UP</td>
+<td>NA</td>
+<td>NA</td>
+<td>OFF</td>
+<td>NA</td>
+<td>NA</td>
+<td>NA</td>
+<td>3.3</td>
+</tr>
+<tr>
+<td class="label">output_interp_unsigned[10]</td>
+<td></td>
+<td>33/2</td>
+<td>Y</td>
+<td>out</td>
+<td>IOB23[A]</td>
+<td>LVCMOS33</td>
+<td>8</td>
+<td>UP</td>
+<td>NA</td>
+<td>NA</td>
+<td>OFF</td>
+<td>NA</td>
+<td>NA</td>
+<td>NA</td>
+<td>3.3</td>
+</tr>
+<tr>
+<td class="label">output_interp_unsigned[11]</td>
+<td></td>
+<td>34/2</td>
+<td>Y</td>
+<td>out</td>
+<td>IOB23[B]</td>
 <td>LVCMOS33</td>
 <td>8</td>
 <td>UP</td>
@@ -734,7 +734,7 @@ Generate output files:
 <td>NA</td>
 <td>NA</td>
 <td>NA</td>
-<td>3.3</td>
+<td>1.2</td>
 </tr>
 <tr>
 <td class="label">88/3</td>
@@ -750,7 +750,7 @@ Generate output files:
 <td>NA</td>
 <td>NA</td>
 <td>NA</td>
-<td>3.3</td>
+<td>1.2</td>
 </tr>
 <tr>
 <td class="label">87/3</td>
@@ -766,7 +766,7 @@ Generate output files:
 <td>NA</td>
 <td>NA</td>
 <td>NA</td>
-<td>3.3</td>
+<td>1.2</td>
 </tr>
 <tr>
 <td class="label">86/3</td>
@@ -782,7 +782,7 @@ Generate output files:
 <td>NA</td>
 <td>NA</td>
 <td>NA</td>
-<td>3.3</td>
+<td>1.2</td>
 </tr>
 <tr>
 <td class="label">85/3</td>
@@ -798,7 +798,7 @@ Generate output files:
 <td>NA</td>
 <td>NA</td>
 <td>NA</td>
-<td>3.3</td>
+<td>1.2</td>
 </tr>
 <tr>
 <td class="label">84/3</td>
@@ -814,7 +814,7 @@ Generate output files:
 <td>NA</td>
 <td>NA</td>
 <td>NA</td>
-<td>3.3</td>
+<td>1.2</td>
 </tr>
 <tr>
 <td class="label">83/3</td>
@@ -830,7 +830,7 @@ Generate output files:
 <td>NA</td>
 <td>NA</td>
 <td>NA</td>
-<td>3.3</td>
+<td>1.2</td>
 </tr>
 <tr>
 <td class="label">82/3</td>
@@ -846,7 +846,7 @@ Generate output files:
 <td>NA</td>
 <td>NA</td>
 <td>NA</td>
-<td>3.3</td>
+<td>1.2</td>
 </tr>
 <tr>
 <td class="label">81/3</td>
@@ -862,7 +862,7 @@ Generate output files:
 <td>NA</td>
 <td>NA</td>
 <td>NA</td>
-<td>3.3</td>
+<td>1.2</td>
 </tr>
 <tr>
 <td class="label">80/3</td>
@@ -878,7 +878,7 @@ Generate output files:
 <td>NA</td>
 <td>NA</td>
 <td>NA</td>
-<td>3.3</td>
+<td>1.2</td>
 </tr>
 <tr>
 <td class="label">79/3</td>
@@ -894,7 +894,7 @@ Generate output files:
 <td>NA</td>
 <td>NA</td>
 <td>NA</td>
-<td>3.3</td>
+<td>1.2</td>
 </tr>
 <tr>
 <td class="label">77/1</td>
@@ -910,7 +910,7 @@ Generate output files:
 <td>NA</td>
 <td>NA</td>
 <td>NA</td>
-<td>3.3</td>
+<td>1.2</td>
 </tr>
 <tr>
 <td class="label">76/1</td>
@@ -926,7 +926,7 @@ Generate output files:
 <td>NA</td>
 <td>NA</td>
 <td>NA</td>
-<td>3.3</td>
+<td>1.2</td>
 </tr>
 <tr>
 <td class="label">75/1</td>
@@ -942,7 +942,7 @@ Generate output files:
 <td>NA</td>
 <td>NA</td>
 <td>NA</td>
-<td>3.3</td>
+<td>1.2</td>
 </tr>
 <tr>
 <td class="label">74/1</td>
@@ -958,7 +958,7 @@ Generate output files:
 <td>NA</td>
 <td>NA</td>
 <td>NA</td>
-<td>3.3</td>
+<td>1.2</td>
 </tr>
 <tr>
 <td class="label">73/1</td>
@@ -974,7 +974,7 @@ Generate output files:
 <td>NA</td>
 <td>NA</td>
 <td>NA</td>
-<td>3.3</td>
+<td>1.2</td>
 </tr>
 <tr>
 <td class="label">72/1</td>
@@ -990,7 +990,7 @@ Generate output files:
 <td>NA</td>
 <td>NA</td>
 <td>NA</td>
-<td>3.3</td>
+<td>1.2</td>
 </tr>
 <tr>
 <td class="label">71/1</td>
@@ -1006,7 +1006,7 @@ Generate output files:
 <td>NA</td>
 <td>NA</td>
 <td>NA</td>
-<td>3.3</td>
+<td>1.2</td>
 </tr>
 <tr>
 <td class="label">70/1</td>
@@ -1022,23 +1022,23 @@ Generate output files:
 <td>NA</td>
 <td>NA</td>
 <td>NA</td>
-<td>3.3</td>
+<td>1.2</td>
 </tr>
 <tr>
 <td class="label">69/1</td>
-<td>input_Rot_A</td>
+<td>-</td>
 <td>in</td>
 <td>IOT42[A]</td>
-<td>LVCMOS33</td>
+<td>LVCMOS18</td>
 <td>NA</td>
 <td>UP</td>
 <td>ON</td>
 <td>NONE</td>
 <td>NA</td>
 <td>NA</td>
-<td>OFF</td>
 <td>NA</td>
-<td>3.3</td>
+<td>NA</td>
+<td>1.2</td>
 </tr>
 <tr>
 <td class="label">68/1</td>
@@ -1054,7 +1054,7 @@ Generate output files:
 <td>NA</td>
 <td>OFF</td>
 <td>NA</td>
-<td>3.3</td>
+<td>1.2</td>
 </tr>
 <tr>
 <td class="label">17/2</td>
@@ -1122,7 +1122,7 @@ Generate output files:
 </tr>
 <tr>
 <td class="label">25/2</td>
-<td>output_interp_unsigned[7]</td>
+<td>output_interp_unsigned[4]</td>
 <td>out</td>
 <td>IOB8[A]</td>
 <td>LVCMOS33</td>
@@ -1138,7 +1138,7 @@ Generate output files:
 </tr>
 <tr>
 <td class="label">26/2</td>
-<td>output_interp_unsigned[6]</td>
+<td>output_interp_unsigned[5]</td>
 <td>out</td>
 <td>IOB8[B]</td>
 <td>LVCMOS33</td>
@@ -1154,7 +1154,7 @@ Generate output files:
 </tr>
 <tr>
 <td class="label">27/2</td>
-<td>output_interp_unsigned[5]</td>
+<td>output_interp_unsigned[6]</td>
 <td>out</td>
 <td>IOB11[A]</td>
 <td>LVCMOS33</td>
@@ -1170,7 +1170,7 @@ Generate output files:
 </tr>
 <tr>
 <td class="label">28/2</td>
-<td>output_interp_unsigned[4]</td>
+<td>output_interp_unsigned[7]</td>
 <td>out</td>
 <td>IOB11[B]</td>
 <td>LVCMOS33</td>
@@ -1186,7 +1186,7 @@ Generate output files:
 </tr>
 <tr>
 <td class="label">29/2</td>
-<td>output_interp_unsigned[3]</td>
+<td>output_interp_unsigned[8]</td>
 <td>out</td>
 <td>IOB13[A]</td>
 <td>LVCMOS33</td>
@@ -1202,7 +1202,7 @@ Generate output files:
 </tr>
 <tr>
 <td class="label">30/2</td>
-<td>output_interp_unsigned[2]</td>
+<td>output_interp_unsigned[9]</td>
 <td>out</td>
 <td>IOB13[B]</td>
 <td>LVCMOS33</td>
@@ -1250,7 +1250,7 @@ Generate output files:
 </tr>
 <tr>
 <td class="label">33/2</td>
-<td>output_interp_unsigned[1]</td>
+<td>output_interp_unsigned[10]</td>
 <td>out</td>
 <td>IOB23[A]</td>
 <td>LVCMOS33</td>
@@ -1266,7 +1266,7 @@ Generate output files:
 </tr>
 <tr>
 <td class="label">34/2</td>
-<td>output_interp_unsigned[0]</td>
+<td>output_interp_unsigned[11]</td>
 <td>out</td>
 <td>IOB23[B]</td>
 <td>LVCMOS33</td>
@@ -1298,7 +1298,7 @@ Generate output files:
 </tr>
 <tr>
 <td class="label">36/2</td>
-<td>output_interp_unsigned[9]</td>
+<td>output_interp_unsigned[2]</td>
 <td>out</td>
 <td>IOB29[B]</td>
 <td>LVCMOS33</td>
@@ -1314,7 +1314,7 @@ Generate output files:
 </tr>
 <tr>
 <td class="label">37/2</td>
-<td>output_interp_unsigned[10]</td>
+<td>output_interp_unsigned[1]</td>
 <td>out</td>
 <td>IOB31[A]</td>
 <td>LVCMOS33</td>
@@ -1330,7 +1330,7 @@ Generate output files:
 </tr>
 <tr>
 <td class="label">38/2</td>
-<td>output_interp_unsigned[11]</td>
+<td>output_interp_unsigned[0]</td>
 <td>out</td>
 <td>IOB31[B]</td>
 <td>LVCMOS33</td>
@@ -1346,7 +1346,7 @@ Generate output files:
 </tr>
 <tr>
 <td class="label">39/2</td>
-<td>output_interp_unsigned[8]</td>
+<td>output_interp_unsigned[3]</td>
 <td>out</td>
 <td>IOB33[A]</td>
 <td>LVCMOS33</td>
@@ -1438,7 +1438,7 @@ Generate output files:
 <td>NA</td>
 <td>OFF</td>
 <td>NA</td>
-<td>3.3</td>
+<td>1.2</td>
 </tr>
 <tr>
 <td class="label">5/3</td>
@@ -1454,7 +1454,7 @@ Generate output files:
 <td>NA</td>
 <td>NA</td>
 <td>NA</td>
-<td>3.3</td>
+<td>1.2</td>
 </tr>
 <tr>
 <td class="label">6/3</td>
@@ -1470,7 +1470,7 @@ Generate output files:
 <td>NA</td>
 <td>NA</td>
 <td>NA</td>
-<td>3.3</td>
+<td>1.2</td>
 </tr>
 <tr>
 <td class="label">7/3</td>
@@ -1486,7 +1486,7 @@ Generate output files:
 <td>NA</td>
 <td>NA</td>
 <td>NA</td>
-<td>3.3</td>
+<td>1.2</td>
 </tr>
 <tr>
 <td class="label">8/3</td>
@@ -1502,7 +1502,7 @@ Generate output files:
 <td>NA</td>
 <td>NA</td>
 <td>NA</td>
-<td>3.3</td>
+<td>1.2</td>
 </tr>
 <tr>
 <td class="label">9/3</td>
@@ -1518,7 +1518,7 @@ Generate output files:
 <td>NA</td>
 <td>NA</td>
 <td>NA</td>
-<td>3.3</td>
+<td>1.2</td>
 </tr>
 <tr>
 <td class="label">10/3</td>
@@ -1534,7 +1534,7 @@ Generate output files:
 <td>NA</td>
 <td>NA</td>
 <td>NA</td>
-<td>3.3</td>
+<td>1.2</td>
 </tr>
 <tr>
 <td class="label">11/3</td>
@@ -1550,7 +1550,7 @@ Generate output files:
 <td>NA</td>
 <td>NA</td>
 <td>NA</td>
-<td>3.3</td>
+<td>1.2</td>
 </tr>
 <tr>
 <td class="label">13/3</td>
@@ -1566,7 +1566,7 @@ Generate output files:
 <td>NA</td>
 <td>NA</td>
 <td>NA</td>
-<td>3.3</td>
+<td>1.2</td>
 </tr>
 <tr>
 <td class="label">14/3</td>
@@ -1582,7 +1582,7 @@ Generate output files:
 <td>NA</td>
 <td>NA</td>
 <td>NA</td>
-<td>3.3</td>
+<td>1.2</td>
 </tr>
 <tr>
 <td class="label">15/3</td>
@@ -1598,7 +1598,7 @@ Generate output files:
 <td>NA</td>
 <td>NA</td>
 <td>NA</td>
-<td>3.3</td>
+<td>1.2</td>
 </tr>
 <tr>
 <td class="label">16/3</td>
@@ -1614,7 +1614,7 @@ Generate output files:
 <td>NA</td>
 <td>NA</td>
 <td>NA</td>
-<td>3.3</td>
+<td>1.2</td>
 </tr>
 <tr>
 <td class="label">63/1</td>
@@ -1630,7 +1630,7 @@ Generate output files:
 <td>NA</td>
 <td>NA</td>
 <td>NA</td>
-<td>3.3</td>
+<td>1.2</td>
 </tr>
 <tr>
 <td class="label">62/1</td>
@@ -1646,7 +1646,7 @@ Generate output files:
 <td>NA</td>
 <td>NA</td>
 <td>NA</td>
-<td>3.3</td>
+<td>1.2</td>
 </tr>
 <tr>
 <td class="label">61/1</td>
@@ -1662,7 +1662,7 @@ Generate output files:
 <td>NA</td>
 <td>NA</td>
 <td>NA</td>
-<td>3.3</td>
+<td>1.2</td>
 </tr>
 <tr>
 <td class="label">60/1</td>
@@ -1678,7 +1678,7 @@ Generate output files:
 <td>NA</td>
 <td>NA</td>
 <td>NA</td>
-<td>3.3</td>
+<td>1.2</td>
 </tr>
 <tr>
 <td class="label">59/1</td>
@@ -1694,7 +1694,7 @@ Generate output files:
 <td>NA</td>
 <td>NA</td>
 <td>NA</td>
-<td>3.3</td>
+<td>1.2</td>
 </tr>
 <tr>
 <td class="label">57/1</td>
@@ -1710,7 +1710,7 @@ Generate output files:
 <td>NA</td>
 <td>OFF</td>
 <td>NA</td>
-<td>3.3</td>
+<td>1.2</td>
 </tr>
 <tr>
 <td class="label">56/1</td>
@@ -1726,23 +1726,23 @@ Generate output files:
 <td>NA</td>
 <td>NA</td>
 <td>NA</td>
-<td>3.3</td>
+<td>1.2</td>
 </tr>
 <tr>
 <td class="label">55/1</td>
-<td>-</td>
+<td>input_Rot_A</td>
 <td>in</td>
 <td>IOR14[B]</td>
-<td>LVCMOS18</td>
+<td>LVCMOS33</td>
 <td>NA</td>
 <td>UP</td>
 <td>ON</td>
 <td>NONE</td>
 <td>NA</td>
 <td>NA</td>
+<td>OFF</td>
 <td>NA</td>
-<td>NA</td>
-<td>3.3</td>
+<td>1.2</td>
 </tr>
 <tr>
 <td class="label">54/1</td>
@@ -1758,7 +1758,7 @@ Generate output files:
 <td>NA</td>
 <td>NA</td>
 <td>NA</td>
-<td>3.3</td>
+<td>1.2</td>
 </tr>
 <tr>
 <td class="label">53/1</td>
@@ -1774,7 +1774,7 @@ Generate output files:
 <td>NA</td>
 <td>NA</td>
 <td>NA</td>
-<td>3.3</td>
+<td>1.2</td>
 </tr>
 <tr>
 <td class="label">52/1</td>
@@ -1790,7 +1790,7 @@ Generate output files:
 <td>NA</td>
 <td>OFF</td>
 <td>NA</td>
-<td>3.3</td>
+<td>1.2</td>
 </tr>
 <tr>
 <td class="label">51/1</td>
@@ -1806,7 +1806,7 @@ Generate output files:
 <td>NA</td>
 <td>NA</td>
 <td>NA</td>
-<td>3.3</td>
+<td>1.2</td>
 </tr>
 <tr>
 <td class="label">50/1</td>
@@ -1822,7 +1822,7 @@ Generate output files:
 <td>NA</td>
 <td>NA</td>
 <td>NA</td>
-<td>3.3</td>
+<td>1.2</td>
 </tr>
 <tr>
 <td class="label">49/1</td>
@@ -1838,7 +1838,7 @@ Generate output files:
 <td>NA</td>
 <td>NA</td>
 <td>NA</td>
-<td>3.3</td>
+<td>1.2</td>
 </tr>
 <tr>
 <td class="label">48/1</td>
@@ -1854,7 +1854,7 @@ Generate output files:
 <td>NA</td>
 <td>NA</td>
 <td>NA</td>
-<td>3.3</td>
+<td>1.2</td>
 </tr>
 </table>
 <br/>
